--- a/moviestyle.css
+++ b/moviestyle.css
@@ -1,4 +1,28 @@
+body{
+    min-height: 480px;
+    max-height: 720px;
+    justify-content: center;
+    display: flex;
+    /* align-items: flex-end; */
+
+    align-items: center;
+    background-image: url();
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
 #addMovie{
+    flex-grow: 0.1;
+    display: flex;
+    font-size: large;
+    max-width: 200px;
+    max-height: 200px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
     background-color: rgb(235, 62, 62);
     color: white;
     width: 100px;
@@ -11,9 +35,17 @@
     width:150px;
     transition-duration: 1s;
     border-radius: 30%;
+    content: unset;
 }
 
 #addMovie:hover:after{
     content:"Add a movie";
+}
+
+#display{
+    /* width: 50vw; */
+    display: flex;
+    flex-direction: column;
+    font-size: medium;
 }
 
